feat: CLI (MzPeakInfo) + cross-container array-equivalence test + docs
- org.mzpeak.cli.MzPeakInfo: dataset summary CLI (dir or ZIP)
- test: chunked decode is byte-identical to point layout for centroid spectra (5,25)
- README updated for ZIP/chunk/chromatogram/lookup support; Javadoc generates clean

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>